# jelly-editor

./: .gitignore  .release-it.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  turbo.json
.changeset/: README.md  config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  extension_proposal.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  deploy-www.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/scripts/: sync-icons.ts
apps/desktop/src/: DialogHost.tsx  NotificationHost.tsx  extensions.ts  index.css  main.tsx  updater.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  menu.rs
apps/www/: astro.config.mjs  package.json
apps/www/src/components/jelly/: JellyEditor.astro  JellyMark.astro  JellyShape.astro
apps/www/src/components/landing/: CTA.astro  CommandSection.astro  FeatureSplit.astro  Footer.astro  Hero.astro  Marquee.astro  Nav.astro  Pillars.astro  Quote.astro  SpecGrid.astro
apps/www/src/components/ui/: AppleIcon.astro  Check.astro  Kbd.astro  (+2 more)
apps/www/src/pages/: changelog.astro  docs.astro  index.astro  roadmap.astro
apps/www/src/styles/: global.css
apps/www/src/utils/: changelog.ts
crates/features/fs/: Cargo.toml  README.md
crates/features/fs/src/: actor.rs  clipboard.rs  commands.rs  drag.rs  lib.rs
crates/features/git/: Cargo.toml  README.md
crates/features/git/src/: commands.rs  lib.rs
crates/features/mcp/: Cargo.toml
crates/features/mcp/src/: commands.rs  lib.rs  server.rs
crates/features/search/: Cargo.toml
crates/features/search/src/: commands.rs  lib.rs  manager.rs  replace.rs
crates/features/terminal/: Cargo.toml  README.md
crates/features/terminal/src/: commands.rs  lib.rs  manager.rs
crates/features/watcher/: Cargo.toml  README.md
crates/features/watcher/src/: lib.rs
crates/jelly-core/: Cargo.toml  README.md
crates/jelly-core/src/: cli.rs  keybindings.rs  lib.rs  persist.rs  recents.rs  settings.rs  state.rs  window.rs  workspace.rs
crates/jelly-protocol/: Cargo.toml  README.md
crates/jelly-protocol/src/: events.rs  fs.rs  git.rs  lib.rs
docs/: architecture.md  extensions.md
docs/architecture/: README.md  backend.md  command-system.md  extensions.md  ipc.md  mcp.md  sdk.md  tooling-and-testing.md  ui-slots.md
scripts/: tag-release.mjs
(+2 files in other folders)
