[workspace]
resolver = "2"
members = [
    "crates/jelly-protocol",
    "crates/jelly-core",
    "crates/features/fs",
    "crates/features/watcher",
    "crates/features/git",
    "crates/features/search",
    "crates/features/terminal",
    "crates/features/mcp",
    "apps/desktop/src-tauri",
]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
