[package]
name = "jelly"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jelly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Feature crates (Cargo workspace). The host folds each one's `register`.
jelly-core = { path = "../../../crates/jelly-core" }
jelly-fs = { path = "../../../crates/features/fs" }
jelly-watcher = { path = "../../../crates/features/watcher" }
jelly-terminal = { path = "../../../crates/features/terminal" }
jelly-git = { path = "../../../crates/features/git" }
